--- a/src/styles/maps.less
+++ b/src/styles/maps.less
@@ -5,4 +5,18 @@
     backgroundColor: #182C61;
     buttonColor:#44bd32;
     buttonColorHouver:#4cd137;
+    CorTexto:#fff;
+}
+
+#display(){
+    display: block;
+    
+}
+
+#largura(){
+    width: 100%;
+}
+
+#margem(){
+    margin-top: 8px;
 }
